# noos

./: .gitignore  Cargo.toml
src/: cli.rs  data.rs  html.rs  logger.rs  main.rs  serialize.rs
templates/: item.html  page.html
