[package]
name = "noos"
version = "0.2.1"
edition = "2024"
description = "A pragmatic RSS aggregator with a browser interface and no built-in reader."
readme = "README.md"
license = "MIT"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
chrono = "0.4.42"
clap = { version = "4.5.50", features = ["derive"] }
html-escape = "0.2.13"
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking"] }
rss = { version = "2.0.12", features = ["with-serde"] }
serde = { version = "1.0.228", features = ["derive"] }
